--- a/mystyle.css
+++ b/mystyle.css
@@ -11,11 +11,16 @@ html {
   }
 
 nav {
-    background-color: blue;
+    position: relative;
+    display: inline-block;
+    vertical-align: bottom;
+    top: 35%;
+    left: 30vw;
+    background-color: white;
     border: 5px outset blue;
-    color: white;
+    color: lightslategrey;
     text-align: center;
-    padding: 20px;
+    padding: 0px;
 }
 
 nav ul {
@@ -40,10 +45,16 @@ nav ul li:hover ul li{
     display:block
 }
 
+a {
+  text-decoration: none;
+  font-weight: bold;
+  color: darkslategrey;
+}
+
 nav a {
     text-decoration: none;
     font-weight: bold;
-    color: white;
+    color: lightslategrey;
 }
 
 nav a:hover {
@@ -95,8 +106,8 @@ nav a:hover {
 
 .logo {
     position: absolute;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     top: 30px;
     right: 30px;
     size: 10%;
@@ -104,6 +115,7 @@ nav a:hover {
 
 .mainheader {
   position: relative;
+  display: inline-block;
   margin: 0;
   width: 200px;
   height: 80px;
