--- a/mystyle.css
+++ b/mystyle.css
@@ -35,14 +35,14 @@ nav ul li {
 nav ul li ul li {
     display: none;
     text-align: center;
-    position:relative;/*position it absolutely..*/
+    position: absolute;/*position it absolutely..*/
     left: 0;/*...align the left edge with the left edge of the parent li...*/
     top:32px;/*...and 32px down from the top - 30px height + 2px for the border*/
     color: black;
 }
 
 nav ul li:hover ul li{
-    display:block
+    display:block;
 }
 
 a {
