--- a/mystyle.css
+++ b/mystyle.css
@@ -10,12 +10,17 @@ html {
   overflow-x: hidden;
 }
 
+a {
+  text-decoration: none;
+  color: darkslategray;
+}
+
 nav {
   position: relative;
   display: inline-block;
   vertical-align: bottom;
   top: 35%;
-  left: 30vw;
+  left: 25vw;
   background-color: white;
   border: 5px outset blue;
   color: lightslategrey;
@@ -29,87 +34,43 @@ nav ul {
 
 nav ul li {
   display: inline-block;
-  padding: 5px 20px;
+  position: relative;
+}
+
+nav ul li a {
+  display: block;
+  padding: 10px 30px;
+  color: lightslategray;
+  text-decoration: none;
+  font-weight: bold;
+  text-align: left;
+  font-size: 25px;
+}
+
+nav ul li ul {
+  display: none;
+  width: 100%;
+  background: white;
+  z-index: 999;
+  position: absolute;
+  top: 7vh;
+  box-shadow: 0px 2px 2px lightgray, 0px -2px 2px lightgray;
 }
 
 nav ul li ul li {
-    display: none;
-    text-align: center;
-    position: absolute;/*position it absolutely..*/
-    left: 0;/*...align the left edge with the left edge of the parent li...*/
-    top:32px;/*...and 32px down from the top - 30px height + 2px for the border*/
-    color: black;
-}
-
-nav ul li:hover ul li{
-    display:block;
-}
-
-a {
-text-decoration: none;
-font-weight: bold;
-color: darkslategrey;
-}
-
-nav a {
-  text-decoration: none;
-  font-weight: bold;
-  color: lightslategrey;
-}
-
-nav a:hover {
-  color: grey;
-}
-
-/* Dropdown Button */
-.dropbtn {
-  background-color: lightblue;
-  color: white;
-  padding: 32px;
-  font-size: 16px;
-  border: none;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
   display: block;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: lightblue;}
-
+nav ul li:hover ul {
+  display: block;
+}
 
 .logo {
   position: absolute;
   width: 40px;
   height: 40px;
-  top: 30px;
-  right: 30px;
+  top: 8vh;
+  right: 8vw;
   size: 10%;
 }
 
