--- a/mystyle.css
+++ b/mystyle.css
@@ -1,131 +1,179 @@
+/*
+TODO: wrapper-main, wrapper-header and wrapper-footer should use same number for max width. Use var to ensure it's the same for every class.
+TODO: Make special paragraph class for body texts.
+*/
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial;
-}
 
 html {
-  width: 100vw;
-  overflow-x: hidden;
+    height: 100%;
+    font-family: arial;
 }
 
-a {
-  text-decoration: none;
-  color: darkslategray;
+body { 
+    height: 100%;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+  }
+
+p {
+    color: darkslategray;
+    font-size: 24px;
+    margin-left: 15px;               /* TODO: Override in specific class location!*/
 }
 
-nav {
-  position: relative;
-  display: inline-block;
-  vertical-align: bottom;
-  top: 35%;
-  left: 25vw;
-  background-color: white;
-  border: 5px outset blue;
-  color: lightslategrey;
-  text-align: center;
-  padding: 0px;
+.wrapper-main {
+    margin: 0 auto;
+    width: 100vw;
+    max-width: 1100px;
 }
 
-nav ul {
-  list-style-type: none;
+ /*
+ Styling for the header including all nav elements.
+ */
+
+ .wrapper-header {
+    margin: 0 auto;
+    width: 100vw;
+    max-width: 1400px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
 }
 
-nav ul li {
-  display: inline-block;
-  position: relative;
+.header-h1 {
+    margin-left: 0px;
+    margin-top: 0;
 }
 
-nav ul li a {
-  display: block;
-  padding: 10px 30px;
-  color: lightslategray;
-  text-decoration: none;
-  font-weight: bold;
-  text-align: left;
-  font-size: 25px;
+
+.header-nav {
+    display: inline-block;
+    background-color: white;
+    text-align: center;
+    width: fit-content;
+    height: 120px;
 }
 
-nav ul li ul {
-  display: none;
-  width: 100%;
-  background: white;
-  z-index: 999;
-  position: absolute;
-  top: 7vh;
-  box-shadow: 0px 2px 2px lightgray, 0px -2px 2px lightgray;
+.header-nav ul {
+    display: flex;
+    justify-content: center;
+    width: 900px;
+    list-style: none;
 }
 
-nav ul li ul li {
-  display: block;
+.header-nav ul li {
+    display: inline-block;
+    font: arial;
+    font-size: 32px;
+    font-weight: bold;
+    padding: 38px 34px;
+    text-align: center;
+}
+  
+.header-nav ul li a {
+    display: block;
+    color: lightslategray;
+    text-decoration: none;
+    font-weight: bold;
+    text-align: left;
+    font-size: 25px;
+ }
+  
+.header-nav ul li ul li a {
+    font-size: 15px;
+}
+  
+.header-nav ul li ul { /* Styling for the dropdown options*/
+    width: 200px;
+    display: none; 
+    background: white;
+    z-index: 999;
+    position: absolute;
+    top: 117px;
+    box-shadow: 0px 2px 2px lightgray;
+    padding: 0;
+    width: auto;
+    height: auto;
+}
+  
+.header-nav ul li ul li {
+    display: block;
+}
+  
+  
+.header-nav ul li:hover ul {
+    display: block;
 }
 
-nav ul li:hover ul {
-  display: block;
+
+
+.banner-image {
+    width: 100vw;
+    height: 400px;
 }
 
-.logo {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  top: 8vh;
-  right: 8vw;
-  size: 10%;
+/*
+Styling for the main section
+*/
+
+.main-h2 {
+    position: relative;
+    top: -150px;
+    margin-left: 0px;
+    margin-top: 0;
+    border: 10px solid green;
+    color: white;
+    font-size: 80px;
+    font-weight: bold;
+    text-shadow: 4px 2px 2px darkslategray;
 }
 
-.mainheader {
-position: relative;
-display: inline-block;
-margin: 0;
-width: 200px;
-height: 80px;
-top: 25%;
-left: 10vw;
-color: darkred;
-}
-
-.bannerimage {
-flex-shrink: 0;
-min-width: 100%;
-height: 250px;
-}
-
-.info-lower {
-
-position: relative;
-bottom: 0;
-width: 100%;
-height: 180px;
-
-background-color: grey;
-}
-
-.info-lower-leftbox {
-
-position: relative;
-display: inline-block;
-vertical-align: top;
-top: 30px;
-left: 20vw;
-height: 50px;
-width: 20vw;
+.main-h3 {
+    margin-left: 0px;
+    margin-top: 20;
+    border: 10px solid green;
+    color: black;
+    font-size: 40px;
+    font-weight: bold;
 
 }
 
-.info-lower-rightbox {
+/*
+Styling for the footer.
+*/
 
-position: relative;
-display: inline-block;
-vertical-align: top;
-top: 30px;
-left: 50vw;
-height: 50px;
-width: 20vw;
-
+.footer-main {
+    bottom: 0;
+    width: 100vw;
+    background-color: #38a697;
+    margin-bottom: 0;
 }
 
-.info-lower-text {
-color: white;
-font-weight: bold;
+.wrapper-footer {
+    margin: 0 auto;
+    width: 100vw;
+    max-width: 1100px;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
+
+.footer-textbox {
+    width: 200px;
+}
+
+.footer-text {              /* Adjust text for paragraphs and lists in footer*/
+    color: white;
+    font-weight: bold;
+}
+
+body > footer {             /* Sets footer under body*/
+  position: sticky;
+  top: 100vh;
+}
+
