--- a/mystyle.css
+++ b/mystyle.css
@@ -10,6 +10,9 @@ html {
 }
 
 body { 
+    max-width: 100%;
+    overflow-x: hidden;
+
     height: 100%;
     margin-top: 0px;
     margin-right: 0px;
