--- a/mystyle.css
+++ b/mystyle.css
@@ -60,14 +60,14 @@ p {
     height: 120px;
 }
 
-.header-nav ul {
+.nav-menu {
     display: flex;
     justify-content: center;
     width: 900px;
     list-style: none;
 }
 
-.header-nav ul li {
+.nav-menu li {
     display: inline-block;
     font: arial;
     font-size: 32px;
@@ -76,7 +76,7 @@ p {
     text-align: center;
 }
   
-.header-nav ul li a {
+.nav-menu li a {
     display: block;
     color: lightslategray;
     text-decoration: none;
@@ -85,11 +85,11 @@ p {
     font-size: 25px;
  }
   
-.header-nav ul li ul li a {
+.nav-menu li ul li a {
     font-size: 15px;
 }
   
-.header-nav ul li ul { /* Styling for the dropdown options*/
+.nav-menu li ul { /* Styling for the dropdown options*/
     width: 200px;
     display: none; 
     background: white;
@@ -102,12 +102,12 @@ p {
     height: auto;
 }
   
-.header-nav ul li ul li {
+.nav-menu li ul li {
     display: block;
 }
   
   
-.header-nav ul li:hover ul {
+.nav-menu li:hover ul {
     display: block;
 }
 
@@ -208,7 +208,11 @@ Mobile settings
     }
 
     .wrapper-header {
-        max-width: 600px;
+        position: fixed;
+        max-width: 768px;
+        background-color: white;
+        width: 100%;
+        z-index: 999;
     }
 
     .hamburger {
@@ -228,8 +232,34 @@ Mobile settings
         transform: translateY(-8px) rotate(-45deg);
     }
 
-    .header-nav {
-        display: none;
+
+    .nav-menu {
+        position: fixed;
+        left: -130%;
+        top:  100px;
+        gap: 0;
+        flex-direction: column;
+        background-color: white;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+    }
+
+    .nav-menu.active {
+        left: 0;
+    }
+
+    .nav-menu li ul { /* Styling for the dropdown options*/
+        width: 200px;
+        display: block; 
+        background: white;
+        z-index: 999;
+        position: absolute;
+        top: 117px;
+        box-shadow: 0px 2px 2px lightgray;
+        padding: 0;
+        width: auto;
+        height: auto;
     }
 
     .main-h2 {
