--- a/mystyle.css
+++ b/mystyle.css
@@ -243,21 +243,31 @@ Mobile settings
         width: 100%;
         text-align: center;
         transition: 0.3s;
+        margin-bottom: 0px;
     }
 
     .nav-menu.active {
         left: 0;
     }
 
+    .nav-menu li {
+        display: inline-block;
+        font: arial;
+        font-size: 16px;
+        font-weight: bold;
+        padding: 0px 30px;
+        text-align: center;
+    }
+
     .nav-menu li ul { /* Styling for the dropdown options*/
-        width: 200px;
+        width: 50;
         display: block; 
-        background: white;
+        background: green;
         z-index: 999;
-        position: absolute;
-        top: 117px;
+        position: relative;
+        top: 0px;
         box-shadow: 0px 2px 2px lightgray;
-        padding: 0;
+        padding: 0px 0px 0px;
         width: auto;
         height: auto;
     }
