--- a/mystyle.css
+++ b/mystyle.css
@@ -266,12 +266,11 @@ Mobile settings
     }
 
 
-
     .nav-submenu-mobile-li { /* Styling for the dropdown options*/
-        width: 50;
+        width: 100%;
         display: block; 
         background: white;
-        z-index: 999;
+        z-index: 10;
         position: relative;
         top: 0px;
         box-shadow: 0px 0px 0px white;
@@ -281,9 +280,16 @@ Mobile settings
         border-bottom: 1px solid #101010
     }
 
+    .nav-submenu-mobile li:hover{
+        background-color: lightskyblue;
+        z-index: 9999;
+    }
+
+
     .nav-submenu-list-mobile {
         display: none;
     }
+    
 
     .nav-submenu-list-mobile.active {
         display: block;
