--- a/mystyle.css
+++ b/mystyle.css
@@ -277,7 +277,9 @@ Mobile settings
         padding: 0px 0px 0px;
         width: auto;
         height: auto;
-        border-bottom: 1px solid #101010
+        margin-top: 10px;
+        margin-bottom: 10px;
+        border-bottom: 1px solid #101010;
     }
 
     .nav-submenu-mobile li:hover{
@@ -287,6 +289,7 @@ Mobile settings
 
 
     .nav-submenu-list-mobile {
+        margin-top: 10px;
         height: 0;
         opacity: 0;
         transition: 0.3s;
