--- a/mystyle.css
+++ b/mystyle.css
@@ -140,11 +140,10 @@ Styling for the main section
 */
 
 .main-h2 {
-    position: relative;
-    top: -150px;
+    position: absolute;
+    top: 300px;
     margin-left: 0px;
     margin-top: 0;
-    border: 10px solid green;
     color: white;
     font-size: 80px;
     font-weight: bold;
@@ -154,9 +153,8 @@ Styling for the main section
 .main-h3 {
     margin-left: 0px;
     margin-top: 20;
-    border: 10px solid green;
-    color: black;
-    font-size: 40px;
+    color: darkslategray;
+    font-size: 60px;
     font-weight: bold;
 
 }
