--- a/mystyle.css
+++ b/mystyle.css
@@ -30,6 +30,7 @@ p {
     margin: 0 auto;
     width: 100vw;
     max-width: 1100px;
+    margin-bottom: 100px;
 }
 
  /*
@@ -47,8 +48,16 @@ p {
 }
 
 .header-h1 {
-    margin-left: 0px;
-    margin-top: 0;
+    margin-left: 40px;
+    margin-top: 10px;
+    font-weight: bold;
+    font-style: italic;
+    color: skyblue;
+    font-size: 50px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    text-shadow: 1px 1px 1px grey;
 }
 
 
@@ -115,7 +124,7 @@ p {
 
 .banner-image {
     width: 100vw;
-    height: 400px;
+    height: 600px;
 }
 
 /* 
