--- a/mystyle.css
+++ b/mystyle.css
@@ -120,11 +120,14 @@ p {
     display: block;
 }
 
-
+.banner-image-index {
+    width: 100vw;
+    height: 600px;   
+}
 
 .banner-image {
     width: 100vw;
-    height: 600px;
+    height: 400px;
 }
 
 /* 
@@ -177,6 +180,7 @@ Styling for the footer.
     width: 100vw;
     background-color: #38a697;
     margin-bottom: 0;
+    padding-top: 50px;
 }
 
 .wrapper-footer {
