added services page

--- a/mystyle.css
+++ b/mystyle.css
@@ -33,6 +33,10 @@ p {
     margin-bottom: 100px;
 }
 
+.main-text {
+    margin-bottom: 100px;
+}
+
  /*
  Styling for the header including all nav elements.
  */
