--- a/mystyle.css
+++ b/mystyle.css
@@ -198,7 +198,9 @@ Styling for the footer.
 }
 
 .footer-textbox {
-    width: 200px;
+    width: 22vw;
+    margin-left: 80px;
+    margin-right: 80px;
 }
 
 .footer-text {              /* Adjust text for paragraphs and lists in footer*/
