--- a/mystyle.css
+++ b/mystyle.css
@@ -219,7 +219,7 @@ Mobile settings
 
 @media only screen and (max-width: 768px) {
     body {
-      background-color: lightblue;
+      background-color: white;
     }
 
     .wrapper-header {
@@ -349,7 +349,7 @@ Mobile settings
     }
 
     .wrapper-footer {     /* Ideally do this with flex */
-        display: block;
+        display: flex;
     }
 
 
