--- a/mystyle.css
+++ b/mystyle.css
@@ -50,6 +50,7 @@ p {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
+    transition: 0.3s ease transform;
 }
 
 
@@ -260,8 +261,9 @@ Mobile settings
         transform: translateY(-8px) rotate(-45deg);
     }
 
-    .navbar{
-        transition: translateY 0.2;
+
+    .hidden {
+        transform: translateY(-100%);
     }
 
     .nav-menu-mobile {
