--- a/mystyle.css
+++ b/mystyle.css
@@ -355,6 +355,13 @@ Mobile settings
 
     .wrapper-footer {     /* Ideally do this with flex */
         display: flex;
+        flex-direction: column;
+    }
+
+    .footer-textbox {
+        width: 90vw;
+        margin-left: 20px;
+        margin-right: 20px;
     }
 
 
