this might fix stuff

--- a/mystyle.css
+++ b/mystyle.css
@@ -372,7 +372,7 @@ Mobile settings
     .banner-image {
         width: 1000px;
         height: 400px;
-        max-width: 768px;
+        max-width:100%;
     }
 
 
