--- a/mystyle.css
+++ b/mystyle.css
@@ -215,6 +215,33 @@ body > footer {             /* Sets footer under body*/
 }
 
 
+.carousel {
+    position: relative;
+}
+
+.carousel__item{
+    height: 300px;
+    background: grey;
+    padding: 1em;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: bold;
+    font-size: 2em;
+    color: #ffffff;
+}
+
+.carousel__nav {
+    width: 100%;
+    padding: 20px 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: red;
+    text-align: center;
+}
+
+
+
+
 /*
 Mobile settings
 */
