--- a/mystyle.css
+++ b/mystyle.css
@@ -227,6 +227,11 @@ body > footer {             /* Sets footer under body*/
     font-weight: bold;
     font-size: 2em;
     color: #ffffff;
+    display: none;
+}
+
+.carousel__item__selected {
+    display: block;
 }
 
 .carousel__nav {
@@ -239,6 +244,19 @@ body > footer {             /* Sets footer under body*/
     text-align: center;
 }
 
+.carousel__button {
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.carousel__button__selected {
+    background: rgba(255, 255, 255, 0.5)
+}
 
 
 
