--- a/mystyle.css
+++ b/mystyle.css
@@ -255,7 +255,7 @@ body > footer {             /* Sets footer under body*/
 }
 
 .carousel__button__selected {
-    background: rgba(255, 255, 255, 0.5)
+    background: rgba(255, 255, 255, 0.5);
 }
 
 
