--- a/mystyle.css
+++ b/mystyle.css
@@ -215,11 +215,11 @@ body > footer {             /* Sets footer under body*/
 }
 
 
-.carousel {
+carousel {
     position: relative;
 }
 
-.carousel__item{
+carousel__item{
     height: 300px;
     background: grey;
     padding: 1em;
@@ -230,7 +230,7 @@ body > footer {             /* Sets footer under body*/
     display: none;
 }
 
-.carousel__item__selected {
+carousel__item__selected {
     display: block;
 }
 
