--- a/mystyle.css
+++ b/mystyle.css
@@ -210,7 +210,6 @@ Styling for the footer.
 }
 
 
-
 .carousel {
     position: relative;
 }
@@ -251,7 +250,7 @@ Styling for the footer.
 }
 
 .carousel__button__selected {
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.5)
 }
 
 
