--- a/mystyle.css
+++ b/mystyle.css
@@ -232,7 +232,7 @@ Styling for the footer.
 
 .carousel__nav {
     width: 100%;
-    padding: 60px 0;
+    padding: 20px 20px;
     border-radius: 25px;
     position: absolute;
     bottom: 0;
