--- a/mystyle.css
+++ b/mystyle.css
@@ -244,7 +244,7 @@ Styling for the footer.
 .carousel__button {
     width: 10px;
     height: 10px;
-    padding: 20px;
+    padding-inline: 30px;
     display: inline-block;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 50%;
