--- a/mystyle.css
+++ b/mystyle.css
@@ -248,6 +248,7 @@ Styling for the footer.
     background: rgba(255, 255, 255, 0.2);
     border-radius: 50%;
     margin: 0 5px;
+    padding: 10px;
     cursor: pointer;
 }
 
