--- a/mystyle.css
+++ b/mystyle.css
@@ -215,7 +215,8 @@ Styling for the footer.
 }
 
 .carousel__item{
-    height: 300px;
+    height: 400px;
+    width: 80%;
     border-radius: 25px;
     background: grey;
     padding: 1em;
