--- a/mystyle.css
+++ b/mystyle.css
@@ -225,6 +225,7 @@ Styling for the footer.
     font-size: 2em;
     color: #ffffff;
     display: none;
+    overflow:hidden
 }
 
 .carousel__item__selected {
