--- a/mystyle.css
+++ b/mystyle.css
@@ -64,7 +64,7 @@ p {
 
 .header-nav {
     display: inline-block;
-    background-color: red;
+    background-color: white;
     text-align: center;
     width: fit-content;
     height: 120px;
@@ -238,7 +238,6 @@ Styling for the footer.
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: ;
     text-align: center;
 }
 
