--- a/mystyle.css
+++ b/mystyle.css
@@ -212,13 +212,15 @@ Styling for the footer.
 
 .carousel {
     position: relative;
-
+    display: flex;
+    justify-content: center;
 }
 
 .carousel__item{
     height: 400px;
     width: 90%;
-    margin: auto;
+    display: flex;
+    justify-content: center;
     border-radius: 25px;
     background: grey;
     font-family: 'Quicksand', sans-serif;
